bk_ida/gccida/c3/init_builtins
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/cppinit.c:1182:22: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  init_builtins( cpp_reader_0 *pfile) 
                     ^~~~~~~~~~~~
                     cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/cppinit.c:1185:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 *v2; // rax 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/cppinit.c:1210:41: error: use of undeclared identifier 'off_673E60'
if ( ++v1 >= ( const  struct builtin *)&off_673E60 ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/cppinit.c:1232:41: error: use of undeclared identifier 'off_673E60'
while ( v1 < ( const  struct builtin *)&off_673E60 ); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/cppinit.c:1259:31: error: use of undeclared identifier 'off_673E80'
cpp_define_builtin( pfile, ( &off_673E80)[v10]); 
                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/init_builtins/src/obj/cppinit.o] Error 1
